// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`formatReportToMarkdown() renders a standard report 1`] = `
"<!-- moon-run-report: unknown -->

## Run report
|     | Action | Time | Status | Info |
| :-: | :----- | ---: | :----- | :--- |
| ⬛️ | \`SetupNodeToolchain\` | 1.4ms | skipped |  |
| ⬛️ | \`SyncNodeProject(types)\` | 3.2ms | skipped |  |
| ⬛️ | \`InstallNodeDeps\` | 3.6ms | skipped |  |
| ⬛️ | \`SyncNodeProject(runtime)\` | 3.7ms | skipped |  |
| ⬛️ | \`SyncNodeProject(website)\` | 4ms | skipped |  |
| 🟪 | \`RunTarget(types:build)\` | 310.2ms | cached |  |
| 🟩 | \`RunTarget(runtime:typecheck)\` | 2.4s | passed |  |
| 🟩 | \`RunTarget(types:typecheck)\` | 571.6ms | passed |  |
| 🟩 | \`RunTarget(website:typecheck)\` | 4.4s | passed |  |"
`;

exports[`formatReportToMarkdown() renders a standard report with touched files 1`] = `
"<!-- moon-run-report: unknown -->

## Run report
|     | Action | Time | Status | Info |
| :-: | :----- | ---: | :----- | :--- |
| ⬛️ | \`SetupNodeToolchain\` | 1.4ms | skipped |  |
| ⬛️ | \`SyncNodeProject(types)\` | 3.2ms | skipped |  |
| ⬛️ | \`InstallNodeDeps\` | 3.6ms | skipped |  |
| ⬛️ | \`SyncNodeProject(runtime)\` | 3.7ms | skipped |  |
| ⬛️ | \`SyncNodeProject(website)\` | 4ms | skipped |  |
| 🟪 | \`RunTarget(types:build)\` | 310.2ms | cached |  |
| 🟩 | \`RunTarget(runtime:typecheck)\` | 2.4s | passed |  |
| 🟩 | \`RunTarget(types:typecheck)\` | 571.6ms | passed |  |
| 🟩 | \`RunTarget(website:typecheck)\` | 4.4s | passed |  |

<details><summary><strong>Touched files</strong></summary><div>

\`\`\`
apps/web/src/index.tsx
packages/example/src/index.ts
\`\`\`

</div></details>"
`;

exports[`formatReportToMarkdown() renders attempts and flakiness 1`] = `
"<!-- moon-run-report: unknown -->

## Run report
|     | Action | Time | Status | Info |
| :-: | :----- | ---: | :----- | :--- |
| 🟩 | \`RunTarget(runtime:typecheck)\` | 2.4s | passed | **FLAKY**, 3 attempts |
| 🟩 | \`RunTarget(runtime:typecheck)\` | 2.4s | passed | 2 attempts |
| 🟥 | \`RunTarget(runtime:typecheck)\` | 2.4s | failed | 3 attempts |"
`;

exports[`formatReportToMarkdown() renders durations 1`] = `
"<!-- moon-run-report: unknown -->

## Run report
Total time: 371ms | Projected time: 1.4s | Estimated savings: 990.8ms (73% decrease)
|     | Action | Time | Status | Info |
| :-: | :----- | ---: | :----- | :--- |
| 🟪 | \`RunTarget(types:build)\` | 0s | cached |  |
| 🟩 | \`RunTarget(runtime:typecheck)\` | 32m 2s | passed |  |
| 🟩 | \`RunTarget(types:typecheck)\` | 1m 4s | passed |  |
| 🟩 | \`RunTarget(website:typecheck)\` | 34.4s | passed |  |"
`;

exports[`formatReportToMarkdown() renders errors 1`] = `
"<!-- moon-run-report: unknown -->

## Run report
|     | Action | Time | Status | Info |
| :-: | :----- | ---: | :----- | :--- |
| 🟥 | \`RunTarget(types:build)\` | 0s | failed |  |
| 🟩 | \`RunTarget(runtime:typecheck)\` | 32m 2s | passed |  |"
`;

exports[`formatReportToMarkdown() renders with git commit 1`] = `
"<!-- moon-run-report: unknown -->

## Run report for [59719f96](https://github.com/moonrepo/moon/commit/59719f967ddcf585da9bc7ba8730dcd2865cbdfa)
|     | Action | Time | Status | Info |
| :-: | :----- | ---: | :----- | :--- |
| ⬛️ | \`SetupNodeToolchain\` | 1.4ms | skipped |  |
| ⬛️ | \`SyncNodeProject(types)\` | 3.2ms | skipped |  |
| ⬛️ | \`InstallNodeDeps\` | 3.6ms | skipped |  |
| ⬛️ | \`SyncNodeProject(runtime)\` | 3.7ms | skipped |  |
| ⬛️ | \`SyncNodeProject(website)\` | 4ms | skipped |  |
| 🟪 | \`RunTarget(types:build)\` | 310.2ms | cached |  |
| 🟩 | \`RunTarget(runtime:typecheck)\` | 2.4s | passed |  |
| 🟩 | \`RunTarget(types:typecheck)\` | 571.6ms | passed |  |
| 🟩 | \`RunTarget(website:typecheck)\` | 4.4s | passed |  |"
`;

exports[`formatReportToMarkdown() renders with matrix data 1`] = `
"<!-- moon-run-report: {"os":"ubuntu-latest","node-version":16} -->

## Run report \`(ubuntu-latest, 16)\`
|     | Action | Time | Status | Info |
| :-: | :----- | ---: | :----- | :--- |
| ⬛️ | \`SetupNodeToolchain\` | 1.4ms | skipped |  |
| ⬛️ | \`SyncNodeProject(types)\` | 3.2ms | skipped |  |
| ⬛️ | \`InstallNodeDeps\` | 3.6ms | skipped |  |
| ⬛️ | \`SyncNodeProject(runtime)\` | 3.7ms | skipped |  |
| ⬛️ | \`SyncNodeProject(website)\` | 4ms | skipped |  |
| 🟪 | \`RunTarget(types:build)\` | 310.2ms | cached |  |
| 🟩 | \`RunTarget(runtime:typecheck)\` | 2.4s | passed |  |
| 🟩 | \`RunTarget(types:typecheck)\` | 571.6ms | passed |  |
| 🟩 | \`RunTarget(website:typecheck)\` | 4.4s | passed |  |

<details><summary><strong>Environment</strong></summary><div>

**OS:** Test
**Matrix:**
\`\`\`
os = ubuntu-latest
node-version = 16
\`\`\`

</div></details>"
`;

exports[`sortReport() sorts by label 1`] = `
"<!-- moon-run-report: unknown -->

## Run report
|     | Action | Time | Status | Info |
| :-: | :----- | ---: | :----- | :--- |
| ⬛️ | \`InstallNodeDeps\` | 3.6ms | skipped |  |
| 🟩 | \`RunTarget(runtime:typecheck)\` | 2.4s | passed |  |
| 🟪 | \`RunTarget(types:build)\` | 310.2ms | cached |  |
| 🟩 | \`RunTarget(types:typecheck)\` | 571.6ms | passed |  |
| 🟩 | \`RunTarget(website:typecheck)\` | 4.4s | passed |  |
| ⬛️ | \`SetupNodeToolchain\` | 1.4ms | skipped |  |
| ⬛️ | \`SyncNodeProject(runtime)\` | 3.7ms | skipped |  |
| ⬛️ | \`SyncNodeProject(types)\` | 3.2ms | skipped |  |
| ⬛️ | \`SyncNodeProject(website)\` | 4ms | skipped |  |"
`;

exports[`sortReport() sorts by time 1`] = `
"<!-- moon-run-report: unknown -->

## Run report
|     | Action | Time | Status | Info |
| :-: | :----- | ---: | :----- | :--- |
| 🟩 | \`RunTarget(website:typecheck)\` | 4.4s | passed |  |
| 🟩 | \`RunTarget(runtime:typecheck)\` | 2.4s | passed |  |
| 🟩 | \`RunTarget(types:typecheck)\` | 571.6ms | passed |  |
| 🟪 | \`RunTarget(types:build)\` | 310.2ms | cached |  |
| ⬛️ | \`SyncNodeProject(website)\` | 4ms | skipped |  |
| ⬛️ | \`SyncNodeProject(runtime)\` | 3.7ms | skipped |  |
| ⬛️ | \`InstallNodeDeps\` | 3.6ms | skipped |  |
| ⬛️ | \`SyncNodeProject(types)\` | 3.2ms | skipped |  |
| ⬛️ | \`SetupNodeToolchain\` | 1.4ms | skipped |  |"
`;
